combine dataset statistics

--- a/evaluation/dataset_statistics.ipynb
+++ b/evaluation/dataset_statistics.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "from transformers import AutoTokenizer\n",
     "\n",
-    "from utilities.utils import load_json\n",
+    "from utilities.utils import load_json, load_pickle\n",
     "from utilities.preprocess import preprocess_patient_state_tuples\n",
     "\n",
     "def describe_emrs(emrs: List[str], tokenizer: AutoTokenizer) -> None:\n",
@@ -70,7 +70,9 @@
    "outputs": [],
    "source": [
     "# Load data & tokenizer\n",
-    "full_emrs = load_json(\"../datasets/full_piphs.json\")\n",
+    "full_emrs_a = load_pickle(\"../datasets/emrs_with_annots.pickle\")\n",
+    "full_emrs_b = load_json(\"../datasets/full_piphs.json\")\n",
+    "full_emrs = full_emrs_a + full_emrs_b\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"../models/ner/tokenizer/\", use_fast=True)\n",
     "\n",
     "# Print data statistics\n",
