--- a/evaluation/dataset_statistics.ipynb
+++ b/evaluation/dataset_statistics.ipynb
@@ -70,9 +70,9 @@
    "outputs": [],
    "source": [
     "# Load data & tokenizer\n",
-    "full_emrs_a = load_pickle(\"../datasets/emrs_with_annots.pickle\")\n",
-    "full_emrs_b = load_json(\"../datasets/full_piphs.json\")\n",
-    "full_emrs = full_emrs_a + full_emrs_b\n",
+    "notes_a = load_pickle(\"../datasets/notes_A.pickle\")\n",
+    "notes_b = load_json(\"../datasets/notes_B_full.json\")\n",
+    "full_emrs = notes_a + notes_b\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"../models/ner/tokenizer/\", use_fast=True)\n",
     "\n",
     "# Print data statistics\n",
@@ -93,7 +93,7 @@
    "outputs": [],
    "source": [
     "# Load data & tokenizer\n",
-    "unnorm_emrs = load_json(\"../datasets/unnorm_patient_states_t.json\")\n",
+    "unnorm_emrs = load_json(\"../datasets/notes_B_unnorm.json\")\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"../models/ner/tokenizer/\", use_fast=True)\n",
     "\n",
     "# preprocessing\n",
@@ -121,7 +121,7 @@
    "outputs": [],
    "source": [
     "# Load data & tokenizer\n",
-    "norm_emrs = load_json(\"../datasets/norm_patient_states_t.json\")\n",
+    "norm_emrs = load_json(\"../datasets/notes_B_norm.json\")\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"../models/ner/tokenizer/\", use_fast=True)\n",
     "\n",
     "# preprocessing\n",
