move incremental diagnosis prediction evaluation script to the dx folder

--- a/evaluation/dx/incremental_dx_eval.ipynb
+++ b/evaluation/dx/incremental_dx_eval.ipynb
@@ -45,7 +45,7 @@
     "    # load data for plotting\n",
     "    dfs = list()\n",
     "    for n_partials in n_partialss:\n",
-    "        df = pd.read_csv(f\"../training/dx/models_increment/encoder-BioLinkBERT__optimizer-AdamW__scheduler-linear__lr-5e-05__n_partials-{n_partials}__input_type-{input_type}__label_type-outicd__scheme-everyk/eval_results/incremental_{split}_{metric}.csv\", index_col=\"prop\")\n",
+    "        df = pd.read_csv(f\"../../training/dx/models_increment/encoder-BioLinkBERT__optimizer-AdamW__scheduler-linear__lr-5e-05__n_partials-{n_partials}__input_type-{input_type}__label_type-outicd__scheme-everyk/eval_results/incremental_{split}_{metric}.csv\", index_col=\"prop\")\n",
     "        df = df[metric].to_frame().rename({metric: \"non-incremental traning\" if n_partials == 1 else \"incremental training\"}, axis=\"columns\")\n",
     "        df.index.rename(name=\"Proportion of input clinical findings\", inplace=True)\n",
     "        dfs.append(df)\n",
